--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -62,6 +62,9 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--color-primary);
 }
 
+.section-header {
+    text-align: var(--section-header-align);
+}
 .section-tagline {
     color: var(--color-primary);
 }
