--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -31,6 +31,8 @@ html {
     --line-height-base: 1.5;
     --line-height-big: 1.8;
 
+    --section-header-align: center;
+
         /* font color*/
     --text-color: var(--color-black);
 }
