--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .section-header {
     text-align: var(--section-header-align);
-
+    padding: var(--section-header-padding);
 }
 
 .section-body {
@@ -115,20 +115,22 @@ h1, h2, h3, h4, h5, h6 {
     padding: var(--section-footer-padding);
     text-align: var(--section-footer-align);
 }
+
 .section-title {
     font-family: var(--font-family-title);
     font-size: var(--font-size-xx-large);
     font-weight: var(--font-weight-bold);
     margin: var(--section-title-margin);
     color: var(--section-title-color);
-
 }
+
 .section-tagline {
     color: var(--color-primary);
     font-family: var(--font-family-title);
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
 }
+
 .container {
     width: 960px;
     margin-left: auto;
